--- a/Makefile.toml
+++ b/Makefile.toml
@@ -484,12 +484,15 @@ generate_generic example kotlin somelib "" /src/main/kotlin
 '''
 
 [tasks.gen-nanobind-feature]
+dependencies = ["gen-cpp-feature"]
 category = "Code generation"
 script_runner = "@duckscript"
 script = '''
 exit_on_error true
 !include_files ./support/functions.ds
-generate_generic feature_tests nanobind src "-l diplomat-py-conf.toml"
+generate_generic feature_tests nanobind somelib/src/cpp "-l diplomat-py-conf.toml" 
+mv nanobind/somelib/src/cpp/somelib_ext.cpp nanobind/somelib/src/somelib_ext.cpp
+rm -rf nanobind/somelib/src/cpp
 '''
 # Build deps
 
