--- a/feature_tests/nanobind/CMakelists.txt
+++ b/feature_tests/nanobind/CMakelists.txt
@@ -33,13 +33,13 @@ find_package(Python 3.9
   REQUIRED COMPONENTS Interpreter Development.Module
   OPTIONAL_COMPONENTS Development.SABIModule)
 
-set(DIPLOMAT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
+set(DIPLOMAT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../..)
 # Import nanobind through CMake's find_package mechanism
 set(nanobind_ROOT "${DIPLOMAT_ROOT}/vendor/nanobind")
 find_package(nanobind CONFIG REQUIRED HINTS "${DIPLOMAT_ROOT}/vendor/nanobind")
 
-# Add our rust library as a custom target
-set(FEATURE_TEST_LIB_FILE ${CMAKE_CURRENT_SOURCE_DIR}/../../../target/debug/${CMAKE_STATIC_LIBRARY_PREFIX}diplomat_feature_tests${CMAKE_STATIC_LIBRARY_SUFFIX})
+# Add our rust library as a custom target, it contains the actual definitions of the things we're binding
+set(FEATURE_TEST_LIB_FILE ${DIPLOMAT_ROOT}/target/debug/${CMAKE_STATIC_LIBRARY_PREFIX}diplomat_feature_tests${CMAKE_STATIC_LIBRARY_SUFFIX})
 add_custom_command(OUTPUT ${FEATURE_TEST_LIB_FILE}
     COMMAND cargo build
 )
@@ -66,7 +66,7 @@ nanobind_add_module(
   # Source code goes here
   src/somelib_ext.cpp
 )
-target_include_directories(somelib PUBLIC "../../cpp/include" "${nanobind_ROOT}/ext/robin_map/include")
+target_include_directories(somelib PUBLIC "../cpp/include" "${nanobind_ROOT}/ext/robin_map/include")
 target_compile_features(somelib PUBLIC cxx_std_20)
 target_link_libraries(somelib PUBLIC diplomat_feature_tests)
 
